# FastCatan

./: CMakeLists.txt  README.md  board.cpp  board.h  components.h  game.cpp  game.h  imgui.ini  main.cpp  player.cpp  player.h  verification.cpp
HumanPlayer/: human_player.cpp  human_player.h
app/: app.cpp  app.h  app_components.h  test.cpp  viewport.cpp  viewport.h  window_ai.cpp  window_ai.h  window_board.cpp  window_board.h  window_game.cpp  window_game.h  window_player.cpp  window_player.h  window_replay.cpp  window_replay.h
app/windows/: window.cpp  window.h  window_ai.cpp  window_ai.h  window_board.cpp  window_board.h  window_game.cpp  window_game.h  window_player.cpp  window_player.h  window_replay.cpp  window_replay.h
logs/: game_0.csv  game_1.csv  game_2.csv  game_3.csv  game_4.csv  game_5.csv  game_6.csv  game_7.csv  game_8.csv  game_9.csv
logs/BaseLine/0/: game_10.csv  game_11.csv  game_12.csv  game_13.csv  game_14.csv  game_15.csv  game_16.csv  game_17.csv  game_18.csv  game_19.csv
logs/BaseLine/1/: game_7.csv
logs/MassiveNN/1/: game_0.csv  game_1.csv  game_2.csv  game_3.csv  game_4.csv  game_5.csv  game_6.csv  game_7.csv
src/game/: CMakeLists.txt  board.cpp  board.h  components.h  game.cpp  game.h  game_manager.cpp  game_manager.h  player.cpp  player.h
src/game/AIHelpers/: ai_helper.cpp  ai_helper.h  bean_helper.cpp  bean_helper.h  zwik_helper.cpp  zwik_helper.h
src/game/AIPlayer/: NeuralWeb.cpp  NeuralWeb.h  ai_bean_player.cpp  ai_bean_player.h  ai_zwik_player.cpp  ai_zwik_player.h  cuda_nn.cu  cuda_nn.cuh  random_player.cpp  random_player.h
src/game/HumanPlayer/: console_player.cpp  console_player.h  gui_player.cpp  gui_player.h  human_player.cpp  human_player.h
src/scripts/: bean_plotter.py  plot_training_csv.py
various/: board.txt
